# custom_auth_django_api

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: db.sqlite3
app/access_control/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
app/access_control/management/commands/: seed_access.py  seed_add_admin.py
app/access_control/migrations/: 0001_initial.py
app/auth_system/: admin.py  middleware.py  models.py  serializers.py  services.py  urls.py  views.py
app/auth_system/migrations/: 0001_initial.py
app/business/: urls.py  views.py
app/config/: settings.py  urls.py
app/users/: admin.py  models.py  serializers.py  urls.py  views.py
app/users/migrations/: 0001_initial.py
