[project]
name = "effective-mobile-test-task"
version = "1.0.0"
description = "Completing test task for junior python dev"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django",
    "djangorestframework",
    "psycopg[binary]",
    "pyjwt",
    "bcrypt",
    "python-dotenv",
    "drf-spectacular",
]
